@@ -1,0 +1,267 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u3001BTS\u6210\u54e1V\u3001Infinite\u3001H1-Key\u9f4a\u767c\u65b0\u5c08\u8f2f\u8207\u5de1\u8ff4\u6f14\u5531\u6703", "description": "K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u3001BTS\u6210\u54e1V\u3001Infinite\u3001H1-Key\u9f4a\u767c\u65b0\u5c08\u8f2f\u8207\u5de1\u8ff4\u6f14\u5531\u6703", "url": "https://www.famechos.me/news/K-POP\u98a8\u66b4\u5e2d\u6372\u5168\u7403\uff1aATEEZ\u3001BTS\u6210\u54e1V\u3001Infinite\u3001H1-Key\u9f4a\u767c\u65b0\u5c08\u8f2f\u8207\u5de1\u8ff4\u6f14\u5531\u6703.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T18:28:22.208801+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會.html"/>
+<meta name="description" content="K-POP風暴席捲全球，眾大牌藝人齊發新專輯與巡迴演唱會！ATEEZ、BTS成員V、Infinite、H1-Key等人氣團體帶來最新音樂作品與精彩演出，讓全球歌迷high翻天！">
+
+<meta name="keywords" content="K-POP, ATEEZ, BTS, V, Infinite, H1-Key, 新專輯, 巡迴演唱會, 全球歌迷, 韓流, 流行音樂">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會.html" />
+        <meta property="og:title" content="K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會" />
+        <meta property="og:description" content="K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會" />
+        <meta property="twitter:description" content="K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-POP風暴席捲全球：ATEEZ、BTS成員V、Infinite、H1-Key齊發新專輯與巡迴演唱會</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>根據KQ娛樂公司的公告，ATEEZ將在歐洲巡迴演唱會中新增兩場倫敦和柏林的演出，總計14場。該樂團原本計劃在歐洲九個國家舉行12場演出，作為《朝向光明：權力之旅巡迴演唱會》的一部分。</p>
+<p>ATEEZ最近發行了第四張日本單曲專輯《Birthday》，登上了Oricon的每日和每週單曲排行榜的第二和第三名。該專輯中與日本男團BE:FIRST合作的先行曲《Royal》曾登上每週數位單曲排行榜榜首。</p>
+<p>該樂團的第十張迷你專輯《Golden Hour: Part 1》於五月發行，登上了告示牌二百大專輯榜的第二名，並連續七週在榜上排名，這是該八人樂團的最長紀錄。</p>
+<h2>日本授予BTS成員V白金認證</h2>
+<p>根據日本唱片協會的公告，BTS成員V的個人專輯《Layover》取得了白金認證，這是他首張在日本銷售超過25萬張的個人專輯。</p>
+<p>《Layover》於去年九月發行，登上了告示牌二百大專輯榜的第二名，並連續七週在榜上排名，這是韓國流行音樂個人歌手的最長紀錄。先行曲《Love Me Again》曾登上告示牌百大熱門歌曲榜的第96名，而主打曲《Slow Dancing》則登上了第51名。</p>
+<h2>慶祝出道15週年，Infinite隆重舉行巡迴演唱會</h2>
+根據Infinite Company的公告，Infinite將舉行巡迴演唱會以慶祝出道15週年。<h2>樂團巡迴演唱會</h2>
+<p>一支六人樂團將於12月6日在首爾舉行為期三天的演唱會，然後將在亞洲八個城市，包括台北、澳門、雅加達、新加坡、橫濱、吉隆坡和香港，舉行演唱會，直到明年三月一日。</p>
+<p>該樂團於去年七月發行了第七張迷你專輯《13egin》，這是他們五年來首次以完整陣容發行的專輯。今年七月，他們舉行了一場粉絲見面會，這是七年來首次以完整陣容舉行的見面會。</p>
+<p>該樂團於2010年六月出道，迄今已發行了26張專輯，包括三張完整專輯。</p>
+<h2>香港粉絲演唱會由H1-Key舉行</h2>
+<p>根據GLG娛樂公司的公告，女團H1-Key將於十一月十六日開始在亞洲舉行首次粉絲演唱會巡迴。</p>
+<p>該四人樂團將首先在香港舉行演唱會，然後將在亞洲其他地區，包括曼谷，舉行演唱會，演唱會名稱為《Find my KEY》。</p>
+<h2>KEY 將與粉絲一起創造美好的回憶</h2>
+<p>KEY組合成員們在官方粉絲社群中表示，他們迫不及待地想與粉絲一起共度美好時光。</p>
+<p>該組合最近發行了第三張迷你專輯《Love or Hate》，並在中國和日本舉辦了簽名會。去年，他們憑藉第二張迷你專輯《Seoul Dreaming》中的主打歌《Seoul》奪得了首個電視音樂榜單的冠軍。</p>
+<p>以下是KEY組合的音樂作品：</p>
+<ul>
+<li>第一張迷你專輯：《Rose Blossom》</li>
+<li>第二張迷你專輯：《Seoul Dreaming》</li>
+<li>第三張迷你專輯：《Love or Hate》</li>
+</ul>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XLOd6Ewluoc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
