@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 18:23:07 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 18:28:36 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -53,5 +53,15 @@
 我有幸親身體驗了「The Show」的全部內容，非常令人印象深刻。該演出提倡女性在劇場中的地位，無論是對於遊客還是當地人，都是一個值得觀看的演出。</description>
   <category>Others</category>
   <pubDate>Fri, 11 Oct 2024 18:23:07 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>ATEEZ擴大歐洲巡迴演唱會至14場
+
+根據KQ娛樂公司的公告，ATEEZ將在歐洲巡迴演唱會中新增兩場倫敦和柏林的演出，總計14場。該樂團原本計劃在歐洲九個國家舉行12場演出，作為《朝向光明：權力之旅巡迴演唱會》的一部分。
+
+ATEEZ最近發行了第四張日本單曲專輯《Birthday》，登上了Oricon的每日和每週單曲排行榜的第二和第三名。該專輯中與日本男團BE:FIRST合作的先行曲《Royal》曾登上每週數位單曲排行榜榜首。</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 18:28:36 +0800</pubDate>
 </item></channel>
 </rss>
