@@ -6,3 +6,4 @@ https://www.koreaherald.com/view.php?ud=20241003050085
 https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241011050558
 https://www.koreaherald.com/view.php?ud=20241001050096
+https://tokyocheapo.com/entertainment/movies-theatre/kanda-myojin-show/
